# Collective-MindGraph

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  tsconfig.base.json  vercel.json
agents/consistency/app/: main.py
agents/frame_aggregator/app/: main.py
agents/graph_writer/app/: main.py
agents/llm_tree_orchestrator/app/: main.py
agents/session_controller/app/: handlers.py  main.py  service.py
agents/session_controller/tests/: test_handlers.py
agents/snapshot/app/: main.py
apps/api/: package.json  tsconfig.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
contracts/: hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: CollectiveMindGraph.sol
contracts/deployments/: latest.json
contracts/scripts/: deploy.ts  smoke.ts
contracts/test/: CollectiveMindGraph.ts
dashboard/app/: db_reader.py  main.py  mqtt_listener.py  views.py
dashboard/static/: styles.css
dashboard/templates/: index.html
dashboard/tests/: test_db_reader.py
deploy/: railway-api.env
docker/: python-service.Dockerfile
docs/: architecture.md  demo-runbook.md  event-contracts.md  graph-rules.md  milestones.md
infra/mosquitto/: mosquitto.conf
shared/common/: config.py  db.py  events.py  graph_rules.py  heartbeat.py  ids.py  logging.py  mqtt.py  serialization.py
tests/contract/: test_events.py  test_graph_rules.py
tests/integration/: test_pipeline_smoke.py
tests/unit/: test_mqtt_service.py
(+40 files in other folders)
