[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collective-mindgraph"
version = "0.1.0"
description = "Distributed multi-agent reasoning system for the Airia AI Agents Hackathon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "paho-mqtt==2.1.0",
  "psycopg[binary]==3.2.9",
  "pydantic==2.11.7",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
]

[tool.setuptools.packages.find]
include = ["agents*", "dashboard*", "mocks*", "shared*", "simulators*"]

[tool.pytest.ini_options]
testpaths = ["tests", "agents", "dashboard"]

